# Polar-Sun-Moon-Analysis

./: .gitignore  CNAME  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  requirements-cdse.txt  requirements.txt  run_flood_detection.sh  run_global_monitoring.sh  setup_and_run_cdse.sh
.github/workflows/: ci.yml  deploy-pages.yml  live-smoke-test.yml  static.yml
api/: README.md
config/: cdse.example.yaml  flood_detection.example.yaml  global_monitoring.yaml
docs/: CDSE_JUPYTERLAB_SETUP.md  CODEX_TIME_AWARE_3D_CONTROL_CENTER.md  data-sources.md  privacy.md  science-and-limitations.md  scientific_documentation.md
docs/data/copernicus/: global_catalog_summary.json  latest_results.json  (+2 more)
docs/flood-map/: index.html
docs/reports/: copernicus-analysis.html
example_data/: example_observations.csv  example_statistics.xlsx
polar_equinox_analysis/: __init__.py  __main__.py  analysis.py  config.py  equinox.py  horizons.py  models.py  pipeline.py  reporting.py  validation.py
scripts/cdse/: check_cdse_connection.py  check_environment.py  global_catalog_monitor.py  publish_flood_map.py  run_flood_detection.py  run_pipeline.py
terra_hazards/: __init__.py  __main__.py  analysis.py  catalog.py  data_sources.json  eonet.py  firms.py  privacy.py  research.py
tests/: test_analysis_reporting_pipeline.py  test_cdse_pipeline.py  test_committed_dataset.py  test_hazards.py  test_horizons.py  test_validation.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: control-center.css  main.tsx  smoke.test.ts  styles.css
website/: index.html
(+7 files in other folders)
