[project]
name = "polar-sun-moon-analysis"
version = "0.2.0"
description = "NASA JPL Horizons polar equinox Sun and Moon apparent altitude analysis"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.0", "pandas>=2.2.0", "numpy>=1.26.0", "matplotlib>=3.8.0", "openpyxl>=3.1.0", "tabulate>=0.9.0"]

[project.scripts]
polar-equinox-analysis = "polar_equinox_analysis.__main__:main"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
